<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".resim_ceviri">

    <ImageView
        android:id="@+id/iv1"
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:contentDescription="@string/iv1"
        app:srcCompat="@mipmap/image_not_found" />

    <TextView
        android:id="@+id/xocropt"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:scrollbars="vertical"
        android:text="@string/xocrpopt" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/spicture"
            android:layout_width="@dimen/bWidth"
            android:layout_height="@dimen/bHeight"
            android:layout_gravity="center_horizontal"
            android:text="@string/spicture" />

        <Button
            android:id="@+id/take_picture"
            android:layout_width="@dimen/bWidth"
            android:layout_height="@dimen/bHeight"
            android:layout_gravity="center_horizontal"
            android:text="@string/take_picture" />

        <Button
            android:id="@+id/xcropimage"
            android:layout_width="@dimen/bWidth"
            android:layout_height="@dimen/bHeight"
            android:layout_gravity="center_horizontal"
            android:text="@string/xcropimage" />

        <Button
            android:id="@+id/xstart_translate"
            android:layout_width="@dimen/bWidth"
            android:layout_height="@dimen/bHeight"
            android:layout_gravity="center_horizontal"
            android:text="@string/xstart_translate" />
    </LinearLayout>
</LinearLayout>
